# aicommit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aicommit/: cli.py  git.py  llm.py
tests/: test_cli.py  test_git.py
