[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicommit"
version = "0.1.0"
description = "AI-powered Conventional Commits message generator using the Claude API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "harkingbee" }]
keywords = ["git", "commit", "ai", "claude", "anthropic", "conventional-commits", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/harkingbee/aicommit"
Repository = "https://github.com/harkingbee/aicommit"
Issues = "https://github.com/harkingbee/aicommit/issues"

[project.scripts]
aicommit = "aicommit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aicommit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
